# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/barrierfree/accessibility/services/test/aamstestmock.gni")

module_output_path = "accessibility/framework_test"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  include_dirs = aams_mock_include_dirs
  include_dirs += [
    "//foundation/barrierfree/accessibility/common/log/include",
    "//foundation/barrierfree/accessibility/dummyData",
    "//foundation/barrierfree/accessibility/frameworks/aafwk/include",
    "//foundation/barrierfree/accessibility/frameworks/aafwk/test/mock/include",
    "//foundation/barrierfree/accessibility/frameworks/asacfwk/include",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/aafwk/include",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/asacfwk/include",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/common/include",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/common/include",
    "//foundation/barrierfree/accessibility/services/aams/include",
    "//foundation/barrierfree/accessibility/services/interface/include",
    "//foundation/barrierfree/accessibility/services/interface/include",
    "//foundation/barrierfree/accessibility/services/interface/include/parcel",
    "//foundation/barrierfree/accessibility/services/interface/include/parcel",
    "//foundation/barrierfree/accessibility/services/test/mock/include/extern",
    "//foundation/barrierfree/accessibility/util/include",
    "//base/account/os_account/frameworks/common/account_error/include",
    "//base/account/os_account/frameworks/common/database/include",
    "//base/account/os_account/interfaces/innerkits/osaccount/native/include",
    "//base/hiviewdfx/hiview/adapter/utility/include/extra/singleton.h",
    "//foundation/arkui/napi/native_engine",
    "//foundation/multimodalinput/input/util/common/include",
    "//foundation/barrierfree/accessibility/services/aams/test/mock/include",
  ]
  defines = [
    "AAMS_LOG_TAG = \"accessibility_test\"",
    "AAMS_LOG_DOMAIN = 0xD005205",
  ]
}

ohos_unittest("accessible_ability_test") {
  module_out_path = module_output_path
  sources = [
    "../src/accessibility_element_operator_callback_impl.cpp",
    "../src/accessibility_ui_test_ability_impl.cpp",
    "../src/accessible_ability_channel_client.cpp",
    "../src/accessible_ability_client_impl.cpp",
    "//foundation/barrierfree/accessibility/frameworks/aafwk/test/mock/src/mock_accessible_ability_channel_proxy.cpp",
    "//foundation/barrierfree/accessibility/frameworks/aafwk/test/mock/src/mock_accessible_ability_channel_stub.cpp",
    "//foundation/barrierfree/accessibility/frameworks/common/src/accessibility_caption.cpp",
    "//foundation/barrierfree/accessibility/frameworks/common/src/accessibility_constants.cpp",
    "//foundation/barrierfree/accessibility/frameworks/common/src/accessibility_element_info.cpp",
    "//foundation/barrierfree/accessibility/frameworks/common/src/accessibility_event_info.cpp",
    "//foundation/barrierfree/accessibility/frameworks/common/src/accessibility_gesture_inject_path.cpp",
    "//foundation/barrierfree/accessibility/frameworks/common/src/accessibility_window_info.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessibility_display_manager.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessibility_dumper.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessibility_settings_config.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessible_ability_manager_service.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessible_ability_manager_service_event_handler.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/utils.cpp",
    "//foundation/barrierfree/accessibility/services/aams/test/mock/src/mock_accessibility_account_data.cpp",
    "//foundation/barrierfree/accessibility/services/aams/test/mock/src/mock_accessibility_common_event.cpp",
    "//foundation/barrierfree/accessibility/services/aams/test/mock/src/mock_accessibility_event_transmission.cpp",
    "//foundation/barrierfree/accessibility/services/aams/test/mock/src/mock_accessibility_input_interceptor.cpp",
    "//foundation/barrierfree/accessibility/services/aams/test/mock/src/mock_accessibility_window_connection.cpp",
    "//foundation/barrierfree/accessibility/services/aams/test/mock/src/mock_accessibility_window_manager.cpp",
    "//foundation/barrierfree/accessibility/services/aams/test/mock/src/mock_accessible_ability_connection.cpp",
    "//foundation/barrierfree/accessibility/services/aams/test/mock/src/mock_accessible_ability_manager_service_state_observer_proxy.cpp",
    "//foundation/barrierfree/accessibility/services/aams/test/mock/src/mock_accessible_ability_manager_service_state_observer_stub.cpp",
    "//foundation/barrierfree/accessibility/services/aams/test/mock/src/mock_os_account_manager.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/accessibility_element_operator_callback_stub.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/accessible_ability_client_stub.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/accessible_ability_manager_service_proxy.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/parcel/accessibility_ability_info_parcel.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/parcel/accessibility_caption_parcel.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/parcel/accessibility_element_info_parcel.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/parcel/accessibility_event_info_parcel.cpp",
    "unittest/accessibility_element_operator_callback_impl_test.cpp",
    "unittest/accessibility_ui_test_ability_impl_test.cpp",
    "unittest/accessible_ability_channel_client_test.cpp",
    "unittest/accessible_ability_client_impl_test.cpp",
  ]
  sources += aams_mock_multimodalinput_src

  configs = [ ":module_private_config" ]

  deps = [
    "//base/global/resource_management/frameworks/resmgr:global_resmgr",
    "//foundation/arkui/napi:ace_napi",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/common:accessibility_common",
    "//foundation/barrierfree/accessibility/services/interface:aams_interface",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "input:libmmi-client",
    "ipc:ipc_core",
    "preferences:native_preferences",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
    "window_manager:libdm",
    "window_manager:libwm",
  ]
}

###############################################################################

group("unittest") {
  testonly = true
  deps = []

  deps += [ ":accessible_ability_test" ]
}
###############################################################################
