# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "accessibility/framework_test"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  include_dirs = [
    "//foundation/barrierfree/accessibility/common/log/include",
    "//foundation/barrierfree/accessibility/dummyData",
    "//foundation/barrierfree/accessibility/frameworks/aafwk/include",
    "//foundation/barrierfree/accessibility/frameworks/asacfwk/include",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/asacfwk/include",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/common/include",
    "//foundation/barrierfree/accessibility/services/aams/include",
    "//foundation/barrierfree/accessibility/services/interface/include",
    "//foundation/barrierfree/accessibility/services/interface/include/parcel",
    "//foundation/barrierfree/accessibility/services/test/mock/include/extern",
    "//foundation/barrierfree/accessibility/util/include",
    "//base/account/os_account/frameworks/common/account_error/include",
    "//base/account/os_account/frameworks/common/database/include",
    "//base/account/os_account/interfaces/innerkits/osaccount/native/include",
    "//base/hiviewdfx/hiview/adapter/utility/include/extra/singleton.h",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//foundation/barrierfree/accessibility/frameworks/asacfwk/test/mock/include",
    "//third_party/json/include",
    "//third_party/jsoncpp/include",
    "//third_party/jsoncpp/include/json",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "//foundation/barrierfree/accessibility/services/aams/test/mock/include",
    "//base/powermgr/power_manager/interfaces/innerkits/native/include",
  ]
  defines = [
    "AAMS_LOG_DOMAIN = 0xD001D05",
    "AAMS_LOG_TAG = \"accessibility_test\"",
  ]
}

ohos_unittest("asac_unit_test") {
  module_out_path = module_output_path
  sources = [
    "../src/accessibility_element_operator_impl.cpp",
    "../src/accessibility_system_ability_client_impl.cpp",
    "//foundation/barrierfree/accessibility/frameworks/common/src/accessibility_caption.cpp",
    "//foundation/barrierfree/accessibility/frameworks/common/src/accessibility_constants.cpp",
    "//foundation/barrierfree/accessibility/frameworks/common/src/accessibility_element_info.cpp",
    "//foundation/barrierfree/accessibility/frameworks/common/src/accessibility_event_info.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessibility_account_data.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessibility_common_event.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessibility_display_manager.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessibility_settings_config.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessibility_window_connection.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessibility_window_manager.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessible_ability_manager_service_event_handler.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/utils.cpp",
    "//foundation/barrierfree/accessibility/services/aams/test/mock/src/mock_accessible_ability_manager_service.cpp",
    "//foundation/barrierfree/accessibility/services/aams/test/mock/src/mock_accessible_ability_manager_service_state_observer_proxy.cpp",
    "//foundation/barrierfree/accessibility/services/aams/test/mock/src/mock_accessible_ability_manager_service_state_observer_stub.cpp",
    "//foundation/barrierfree/accessibility/services/aams/test/mock/src/mock_os_account_manager.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/accessibility_element_operator_callback_proxy.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/accessibility_element_operator_stub.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/accessible_ability_manager_caption_observer_stub.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/accessible_ability_manager_service_proxy.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/accessible_ability_manager_state_observer_stub.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/parcel/accessibility_ability_info_parcel.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/parcel/accessibility_caption_parcel.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/parcel/accessibility_element_info_parcel.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/parcel/accessibility_event_info_parcel.cpp",
    "unittest/accessibility_element_operator_impl_test.cpp",
    "unittest/accessibility_system_ability_client_impl_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "//base/global/resource_management/frameworks/resmgr:global_resmgr",
    "//foundation/barrierfree/accessibility/common/interface:accessibility_interface",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/common:accessibility_common",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "input:libmmi-client",
    "ipc:ipc_core",
    "preferences:native_preferences",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "time_service:time_service",
    "utils_base:utils",
    "window_manager:libdm",
    "window_manager:libwm",
  ]
}

###############################################################################

group("unittest") {
  testonly = true
  deps = []

  deps += [ ":asac_unit_test" ]
}
###############################################################################
