# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/barrierfree/accessibility/accessibility_aafwk.gni")

module_output_path = "accessibility/framework_test"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  include_dirs = [
    "${ability_runtime_inner_api_path}/ability_manager/include",
    "//foundation/barrierfree/accessibility/common/log/include",
    "//foundation/barrierfree/accessibility/dummyData",
    "//foundation/barrierfree/accessibility/frameworks/aafwk/include",
    "//foundation/barrierfree/accessibility/frameworks/asacfwk/include",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/asacfwk/include",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/common/include",
    "//foundation/barrierfree/accessibility/services/aams/include",
    "//foundation/barrierfree/accessibility/common/interface/include",
    "//foundation/barrierfree/accessibility/common/interface/include/parcel",
    "//foundation/barrierfree/accessibility/services/test/mock/include/extern",
    "//foundation/barrierfree/accessibility/util/include",
    "//base/account/os_account/frameworks/common/account_error/include",
    "//base/account/os_account/frameworks/common/database/include",
    "//base/account/os_account/interfaces/innerkits/osaccount/native/include",
    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
    "//base/hiviewdfx/hitrace/interfaces/native/innerkits/include/hitrace_meter",
    "//base/hiviewdfx/hiview/adapter/utility/include/extra/singleton.h",
    "//base/notification/common_event_service/interfaces/inner_api",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy/include",
    "//foundation/barrierfree/accessibility/frameworks/asacfwk/test/mock/include",
    "//foundation/bundlemanager/bundle_framework/interfaces/inner_api/appexecfwk_base/include",
    "//foundation/bundlemanager/bundle_framework/interfaces/inner_api/appexecfwk_core/include",
    "//foundation/bundlemanager/bundle_framework/interfaces/inner_api/appexecfwk_core/include/bundlemgr",
    "//foundation/multimedia/image_standard/interfaces/innerkits/include",
    "//foundation/multimedia/image_standard/interfaces/kits/native/include",
    "//foundation/multimodalinput/input/interfaces/native/innerkits/proxy/include",
    "//foundation/multimodalinput/input/util/common/include",
    "//foundation/window/window_manager/dm/include",
    "//foundation/window/window_manager/interfaces/innerkits",
    "//foundation/window/window_manager/interfaces/innerkits/dm",
    "//foundation/window/window_manager/interfaces/innerkits/wm",
    "//foundation/window/window_manager/utils/include",
    "//third_party/json/include",
    "//third_party/jsoncpp/include",
    "//third_party/jsoncpp/include/json",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "//foundation/barrierfree/accessibility/services/aams/test/mock/include",
    "//base/powermgr/power_manager/interfaces/innerkits/native/include",
  ]
  defines = [
    "AAMS_LOG_DOMAIN = 0xD001D05",
    "AAMS_LOG_TAG = \"accessibility_test\"",
  ]
}

ohos_unittest("asac_unit_test") {
  module_out_path = module_output_path
  sources = [
    "../src/accessibility_element_operator_impl.cpp",
    "../src/accessibility_system_ability_client_impl.cpp",
    "//foundation/barrierfree/accessibility/common/interface/src/accessibility_element_operator_callback_proxy.cpp",
    "//foundation/barrierfree/accessibility/common/interface/src/accessibility_element_operator_stub.cpp",
    "//foundation/barrierfree/accessibility/common/interface/src/accessible_ability_manager_caption_observer_stub.cpp",
    "//foundation/barrierfree/accessibility/common/interface/src/accessible_ability_manager_service_proxy.cpp",
    "//foundation/barrierfree/accessibility/common/interface/src/accessible_ability_manager_state_observer_stub.cpp",
    "//foundation/barrierfree/accessibility/common/interface/src/parcel/accessibility_ability_info_parcel.cpp",
    "//foundation/barrierfree/accessibility/common/interface/src/parcel/accessibility_caption_parcel.cpp",
    "//foundation/barrierfree/accessibility/common/interface/src/parcel/accessibility_element_info_parcel.cpp",
    "//foundation/barrierfree/accessibility/common/interface/src/parcel/accessibility_event_info_parcel.cpp",
    "//foundation/barrierfree/accessibility/frameworks/common/src/accessibility_caption.cpp",
    "//foundation/barrierfree/accessibility/frameworks/common/src/accessibility_constants.cpp",
    "//foundation/barrierfree/accessibility/frameworks/common/src/accessibility_element_info.cpp",
    "//foundation/barrierfree/accessibility/frameworks/common/src/accessibility_event_info.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessibility_account_data.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessibility_common_event.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessibility_display_manager.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessibility_settings_config.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessibility_window_connection.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessibility_window_manager.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessible_ability_manager_service_event_handler.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/utils.cpp",
    "//foundation/barrierfree/accessibility/services/aams/test/mock/src/mock_accessible_ability_manager_service.cpp",
    "//foundation/barrierfree/accessibility/services/aams/test/mock/src/mock_accessible_ability_manager_service_state_observer_proxy.cpp",
    "//foundation/barrierfree/accessibility/services/aams/test/mock/src/mock_accessible_ability_manager_service_state_observer_stub.cpp",
    "//foundation/barrierfree/accessibility/services/aams/test/mock/src/mock_os_account_manager.cpp",
    "unittest/accessibility_element_operator_impl_test.cpp",
    "unittest/accessibility_system_ability_client_impl_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/barrierfree/accessibility/common/interface:accessibility_interface",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/common:accessibility_common",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "preferences:native_preferences",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "window_manager:libwm",
  ]
}

###############################################################################

group("unittest") {
  testonly = true
  deps = []

  deps += [ ":asac_unit_test" ]
}
###############################################################################
