# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/barrierfree/accessibility/accessibility_aafwk.gni")

ability_runtime_path = "//foundation/barrierfree/accessibility/frameworks/aafwk"

config("accessibleability_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${ability_runtime_path}/include",
    "//foundation/barrierfree/accessibility/common/log/include",
  ]

  defines = [
    "AAMS_LOG_TAG = \"accessibility_aakit\"",
    "AAMS_LOG_DOMAIN = 0xD005201",
  ]
}

config("accessibleability_public_config") {
  include_dirs = [ "include" ]
}

aafwk_files = [
  "${ability_runtime_path}/src/accessibility_element_operator_callback_impl.cpp",
  "${ability_runtime_path}/src/accessibility_ui_test_ability_impl.cpp",
  "${ability_runtime_path}/src/accessible_ability_channel_client.cpp",
  "${ability_runtime_path}/src/accessible_ability_client_impl.cpp",
]

ohos_shared_library("accessibleability") {
  sources = aafwk_files

  configs = [ ":accessibleability_private_config" ]

  public_configs = [ ":accessibleability_public_config" ]

  deps = [
    "${aafwk_kits_path}/ability/native:abilitykit_native",
    "//foundation/barrierfree/accessibility/services/interface:aams_interface",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "input:libmmi-client",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
  ]

  public_deps = [
    "//base/global/i18n/frameworks/intl:intl_util",
    "//base/global/resource_management/frameworks/resmgr:global_resmgr",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/common:accessibility_common",
  ]

  install_enable = true

  subsystem_name = "barrierfree"
  part_name = "accessibility"
}
